fixed overlay on smaller screens

--- a/src/styles/modules/m-overlay.scss
+++ b/src/styles/modules/m-overlay.scss
@@ -11,6 +11,7 @@
     transition: top 500ms ease-in-out;
     font-family: 'Poppins', sans-serif;
     text-align: center;
+    overflow-y: auto;
 
     h1 {
         font-size: 100px;
